@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021, 2022 Obeo.
+ * Copyright (c) 2021, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -256,7 +256,7 @@ export const widgetFields = `
     }
   } 
 
-  fragment labelFields on LabelWidget {
+  fragment labelWidgetFields on LabelWidget {
     label
     stringValue: value
     style {
@@ -329,7 +329,7 @@ export const widgetFields = `
       ...toolbarActionFields
     }
     ... on LabelWidget {
-      ...labelFields
+      ...labelWidgetFields
     }
     ... on ChartWidget {
       ...chartWidgetFields
